--- a/lib/snapshot/snapshot.c.tmpl
+++ b/lib/snapshot/snapshot.c.tmpl
@@ -16,12 +16,14 @@
 // generated snapshot binary file for the vm isolate.
 // This string forms the content of the dart vm isolate snapshot which
 // is loaded into the vm isolate.
-const SNAPSHOT_EXPORT uint8_t kVmIsolateSnapshot[]
-     = { %s };
+const uint8_t kDartVmSnapshotData[]
+        = { %s };
+const uint8_t kDartVmSnapshotInstructions =  NULL;
 
 // The string on the next line will be filled in with the contents of the
 // generated snapshot binary file for a regular dart isolate.
 // This string forms the content of a regular dart isolate snapshot which
 // is loaded into an isolate when it is created.
-const SNAPSHOT_EXPORT uint8_t kIsolateSnapshot[]
-    = { %s };
+const uint8_t kDartIsolateSnapshotData[]
+        = { %s };
+const uint8_t kDartIsolateSnapshotInstructions = NULL;
